@@ -2074,6 +2074,9 @@ static int parse_struct(xmlDocPtr doc, xmlNodePtr node,
 {
     int status = 0;
   
+    if (node == NULL)
+        return -1;
+
     /* call for the parser function of the node type. */
     switch (node->type) {
 
@@ -2098,7 +2101,7 @@ static int parse_struct(xmlDocPtr doc, xmlNodePtr node,
     }
 
     if (node->next != NULL)
-           if (parse_struct(doc, node->next, xrdoc, members) == -1)
+        if (parse_struct(doc, node->next, xrdoc, members) == -1)
             return -1;
 
     return status;
@@ -2224,7 +2227,7 @@ static int parse_member_element(xmlDocPtr doc, xmlNodePtr node,
         return -1;
     }
 
-    name = octstr_create(node->name);
+    name = octstr_create((const char*)node->name);
     if (octstr_len(name) == 0) {
         octstr_destroy(name);
         return -1;
@@ -2263,7 +2266,7 @@ static int parse_member_element(xmlDocPtr doc, xmlNodePtr node,
         }
         content_buff = xmlNodeListGetString(doc, node->xmlChildrenNode, 1);
         if (content_buff != NULL) {
-            member->name = octstr_create(content_buff);
+            member->name = octstr_create((const char*)content_buff);
             xmlFree(content_buff);
         } else {
             xrdoc->parse_status = XMLRPC_PARSING_FAILED;
@@ -2287,6 +2290,9 @@ static int parse_array(xmlDocPtr doc, xmlNodePtr node,
 {
     int status = 0;
   
+    if (node == NULL)
+        return -1;
+
     /* call for the parser function of the node type. */
     switch (node->type) {
 
@@ -2311,7 +2317,7 @@ static int parse_array(xmlDocPtr doc, xmlNodePtr node,
     }
 
     if (node->next != NULL)
-           if (parse_array(doc, node->next, xrdoc, elements) == -1)
+        if (parse_array(doc, node->next, xrdoc, elements) == -1)
             return -1;
 
     return status;
